# py-interceptors

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: dependencies.md  interceptor-lifecycle.md  observability.md  organizing-workflows.md  runtime-and-policies.md
examples/: __init__.py  cities_countries_continents.py  csv_import_pipeline.py  external_api_fanout.py  fastapi_request_pipeline.py  sync_fastapi_enrichment_pipeline.py
src/py_interceptors/: __init__.py  chains.py  errors.py  interceptors.py  plan.py  policies.py  runtime.py  types.py  validation.py
tests/: _example_loader.py  test_async_policy.py  test_builders.py  test_chain.py  test_cities_countries_continents.py  test_csv_import_example.py  test_dependencies.py  test_external_api_fanout_example.py  test_fastapi_request_pipeline.py  test_observers.py  test_policies.py  test_policy_matrix.py  test_policy_resource_cleanup.py  test_stream.py  test_sync_fastapi_enrichment_pipeline.py  test_validation.py
