[project]
name = "py-interceptors"
version = "0.1.0"
description = "Composable typed interceptor workflows for Python"
readme = "README.md"
authors = [
    { name = "Oliver Smit", email = "16165237+olmesm@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "polars>=1.40.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
