[project]
name = "py-interceptors"
version = "0.1.0"
description = "Composable typed interceptor workflows for Python"
readme = "README.md"
authors = [
    { name = "Oliver Smit", email = "16165237+olmesm@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "polars>=1.40.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "src",
    "tests",
]

[tool.semantic_release]
# Single source of truth for the version.
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = ""  # build handled by `uv build` in the workflow
commit_message = "chore(release): {version}\n\nAutomated release by python-semantic-release."
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
# Conventional Commits → version bumps
allowed_tags = [
    "feat", "fix", "perf", "refactor", "docs", "style",
    "test", "build", "ci", "chore", "revert",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

